[feat]新增check API判斷

--- a/login.html
+++ b/login.html
@@ -81,7 +81,7 @@
                 window.location = "product.html"; 
               })
               .catch(err =>{
-                alert('無法登入，請重新登入')
+                alert(`${err.data.error.message}`)
               });
           }
         }
