[feat]調整檔名&路徑

--- a/product.html
+++ b/product.html
@@ -115,7 +115,7 @@
 							})
 							.catch(err =>{
                 alert('無權限瀏覽，請重新登入')
-                window.location = "login.html";
+                window.location = "index.html";
 							});
           },
           clickDetail(item){
