--- a/product.html
+++ b/product.html
@@ -27,7 +27,7 @@
       <div class="container">
         <div class="row py-3">
           <div class="col-md-6">
-            <h2>產品列表</h2>
+            <h2>產品列表TEST</h2>
             <table class="table table-hover mt-4">
               <thead>
                 <tr>
@@ -116,7 +116,7 @@
               .catch(err =>{
                 alert(err.response.data.message);
                 window.location = "login.html";
-              });
+              });g
           },
           getProducts(){
             axios.get(`${this.url}v2/api/${this.path}/admin/products`)
