--- a/hw3/product.html
+++ b/hw3/product.html
@@ -8,14 +8,13 @@
     <title>第三周</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-
   </head>
 
   <body>
     <div id="app">
       <div class="container">
         <div class="text-end mt-4">
-          <button class="btn btn-primary" type="button" @click="openModal">
+          <button class="btn btn-primary" type="button" @click="openModal('new','')">
             建立新的產品
           </button>
         </div>
@@ -52,10 +51,10 @@
               </td>
               <td>
                 <div class="btn-group">
-                  <button type="button" class="btn btn-outline-primary btn-sm">
+                  <button type="button" class="btn btn-outline-primary btn-sm" @click="openModal('edit',product)">
                     編輯
                   </button>
-                  <button type="button" class="btn btn-outline-danger btn-sm">
+                  <button type="button" class="btn btn-outline-danger btn-sm" @click="openModal('delete',product)">
                     刪除
                   </button>
                 </div>
@@ -71,7 +70,8 @@
           <div class="modal-content border-0">
             <div class="modal-header bg-dark text-white">
               <h5 id="productModalLabel" class="modal-title">
-                <span>新增產品</span>
+                <span v-if="getType === 'new'">新增產品</span>
+                <span v-else>編輯產品</span>
               </h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
@@ -81,8 +81,7 @@
                   <div class="mb-2">
                     <div class="mb-3">
                       <label for="imageUrl" class="form-label">輸入圖片網址</label>
-                      <input type="text" class="form-control"
-                             placeholder="請輸入圖片連結">
+                      <input type="text" class="form-control" placeholder="請輸入圖片連結" v-model="tmpProduct.imageUrl">
                     </div>
                     <img class="img-fluid" src="" alt="">
                   </div>
@@ -91,7 +90,7 @@
                       新增圖片
                     </button>
                   </div>
-                  <div v-else>
+                  <div >
                     <button class="btn btn-outline-danger btn-sm d-block w-100">
                       刪除圖片
                     </button>
@@ -100,50 +99,43 @@
                 <div class="col-sm-8">
                   <div class="mb-3">
                     <label for="title" class="form-label">標題</label>
-                    <input id="title" type="text" class="form-control" placeholder="請輸入標題">
+                    <input id="title" type="text" class="form-control" placeholder="請輸入標題" v-model="tmpProduct.title">
                   </div>
 
                   <div class="row">
                     <div class="mb-3 col-md-6">
                       <label for="category" class="form-label">分類</label>
-                      <input id="category" type="text" class="form-control"
-                             placeholder="請輸入分類">
+                      <input id="category" type="text" class="form-control"placeholder="請輸入分類" v-model="tmpProduct.category">
                     </div>
                     <div class="mb-3 col-md-6">
                       <label for="price" class="form-label">單位</label>
-                      <input id="unit" type="text" class="form-control" placeholder="請輸入單位">
+                      <input id="unit" type="text" class="form-control" placeholder="請輸入單位" v-model="tmpProduct.unit">
                     </div>
                   </div>
 
                   <div class="row">
                     <div class="mb-3 col-md-6">
                       <label for="origin_price" class="form-label">原價</label>
-                      <input id="origin_price" type="number" min="0" class="form-control" placeholder="請輸入原價">
+                      <input id="origin_price" type="number" min="0" class="form-control" placeholder="請輸入原價" v-model="tmpProduct.origin_price">
                     </div>
                     <div class="mb-3 col-md-6">
                       <label for="price" class="form-label">售價</label>
-                      <input id="price" type="number" min="0" class="form-control"
-                             placeholder="請輸入售價">
+                      <input id="price" type="number" min="0" class="form-control" placeholder="請輸入售價" v-model="tmpProduct.price">
                     </div>
                   </div>
                   <hr>
 
                   <div class="mb-3">
                     <label for="description" class="form-label">產品描述</label>
-                    <textarea id="description" type="text" class="form-control"
-                              placeholder="請輸入產品描述">
-                    </textarea>
+                    <textarea id="description" type="text" class="form-control"placeholder="請輸入產品描述" v-model="tmpProduct.description"></textarea>
                   </div>
                   <div class="mb-3">
                     <label for="content" class="form-label">說明內容</label>
-                    <textarea id="description" type="text" class="form-control"
-                              placeholder="請輸入說明內容">
-                    </textarea>
+                    <textarea id="description" type="text" class="form-control"placeholder="請輸入說明內容" v-model="tmpProduct.content"></textarea>
                   </div>
                   <div class="mb-3">
                     <div class="form-check">
-                      <input id="is_enabled" class="form-check-input" type="checkbox"
-                             :true-value="1" :false-value="0">
+                      <input id="is_enabled" class="form-check-input" type="checkbox" :true-value="1" :false-value="0" v-model="tmpProduct.is_enabled">
                       <label class="form-check-label" for="is_enabled">是否啟用</label>
                     </div>
                   </div>
@@ -154,7 +146,7 @@
               <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
                 取消
               </button>
-              <button type="button" class="btn btn-primary" @click="updateModal">
+              <button type="button" class="btn btn-primary" @click="updateModal(tmpProduct)">
                 確認
               </button>
             </div>
@@ -179,7 +171,7 @@
               <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
                 取消
               </button>
-              <button type="button" class="btn btn-danger">
+              <button type="button" class="btn btn-danger" @click.prevent="deleteModal()">
                 確認刪除
               </button>
             </div>
@@ -200,6 +192,10 @@
             url:"https://vue3-course-api.hexschool.io/",
             pathName:'rainj',
             productList:[],
+            getType:'',
+            tmpProduct:{
+              imagesUrl:[],
+            },
           }
         },
         mounted(){
@@ -208,8 +204,7 @@
           this.checkToken();
 
           openProductModal  = new bootstrap.Modal(document.getElementById('productModal'));
-
-          //this.openProductModal();
+          delProductModal  = new bootstrap.Modal(document.getElementById('delProductModal'));
         },
         methods:{
           checkToken(){
@@ -218,13 +213,14 @@
                 this.getProducts();
               })
               .catch(err =>{
-                alert(err.response.data.message);
+                alert(err.data.message);
                 window.location = "index.html";
               });
           },
           getProducts(){
             axios.get(`${this.url}v2/api/${this.pathName}/admin/products`)
               .then(res => {
+                console.log(res)
                 this.productList = res.data.products;
                 console.log(this.productList)
               })
@@ -232,11 +228,55 @@
                 alert(err.response.data.message);
               });
           },
-          openModal(){
-            openProductModal.show();
+          openModal(type,product){
+            this.getType = type ;
+            if(this.getType === 'new') {
+              this.tmpProduct = {
+                imagesUrl:[],
+              }
+              openProductModal.show();
+            } else if(this.getType === 'edit'){
+              console.log(product)
+              this.tmpProduct = {...product}
+              console.log(this.tmpProduct)
+              openProductModal.show();
+            } else {
+              this.tmpProduct = {...product}
+              // console.log(this.tmpProduct)
+              delProductModal.show();
+            }
+            
           },
-          updateModal(){
+          updateModal(product){
+            if(this.getType === 'new') {
+              axios.post(`${this.url}v2/api/${this.pathName}/admin/product`,{data:product})
+                .then(res => {
+                  this.getProducts();
+                })
+                .catch(err =>{
+                  alert(err.response.data.message);
+                });
+            } else {
+              axios.put(`${this.url}v2/api/${this.pathName}/admin/product/${this.tmpProduct.id}`,{data:this.tmpProduct})
+                .then(res => {
+                  this.getProducts();
+                })
+                .catch(err =>{
+                  alert(err.response.data.message);
+                });
+            }
             openProductModal.hide();
+          },
+          deleteModal(){
+            console.log(this.tmpProduct)
+            axios.delete(`${this.url}v2/api/${this.pathName}/admin/product/${this.tmpProduct.id}`)
+              .then(res => {
+                delProductModal.hide();
+                this.getProducts();
+              })
+              .catch(err =>{
+                alert(err.response.data.message);
+              });
           },
         },
       }).mount('#app');
