[feat]完成第三週作業

--- a/hw3/product.html
+++ b/hw3/product.html
@@ -78,21 +78,36 @@
             <div class="modal-body">
               <div class="row">
                 <div class="col-sm-4">
-                  <div class="mb-2">
-                    <div class="mb-3">
-                      <label for="imageUrl" class="form-label">輸入圖片網址</label>
-                      <input type="text" class="form-control" placeholder="請輸入圖片連結" v-model="tmpProduct.imageUrl">
+                  <div class="mb-3">
+                    <label for="imageUrl" class="form-label">主要圖片</label>
+                    <input v-model="tmpProduct.imageUrl" type="text" class="form-control mb-2" placeholder="請輸入圖片連結">
+                    <img class="img-fluid" :src="tmpProduct.imageUrl">
+                  </div>
+                  <h3 class="mb-3">多圖新增</h3>
+                  <div v-if="tmpProduct.imagesUrl.length">
+                    <div class="mb-1" v-for="(image, index) in tmpProduct.imagesUrl" :key="index">
+                      <div class="mb-3">
+                        <label for="imageUrl" class="form-label">圖片網址</label>
+                        <input v-model="tmpProduct.imagesUrl[index]" type="text" class="form-control"
+                          placeholder="請輸入圖片連結">
+                      </div>
+                      <img class="img-fluid" :src="image">
                     </div>
-                    <img class="img-fluid" src="" alt="">
+                    <div v-if="!tmpProduct.imagesUrl.length || tmpProduct.imagesUrl[tmpProduct.imagesUrl.length-1]">
+                      <button class="btn btn-outline-primary btn-sm d-block w-100"
+                        @click="uploadImages('new')">
+                        新增圖片
+                      </button>
+                    </div>
+                    <div v-else>
+                      <button class="btn btn-outline-danger btn-sm d-block w-100" @click="uploadImages('delete')">
+                        刪除圖片
+                      </button>
+                    </div>
                   </div>
-                  <div>
-                    <button class="btn btn-outline-primary btn-sm d-block w-100">
+                  <div v-else>
+                    <button class="btn btn-outline-primary btn-sm d-block w-100" @click="uploadImages('new')">
                       新增圖片
-                    </button>
-                  </div>
-                  <div >
-                    <button class="btn btn-outline-danger btn-sm d-block w-100">
-                      刪除圖片
                     </button>
                   </div>
                 </div>
@@ -112,19 +127,17 @@
                       <input id="unit" type="text" class="form-control" placeholder="請輸入單位" v-model="tmpProduct.unit">
                     </div>
                   </div>
-
                   <div class="row">
                     <div class="mb-3 col-md-6">
                       <label for="origin_price" class="form-label">原價</label>
-                      <input id="origin_price" type="number" min="0" class="form-control" placeholder="請輸入原價" v-model="tmpProduct.origin_price">
+                      <input id="origin_price" type="number" min="0" class="form-control" placeholder="請輸入原價" v-model.number="tmpProduct.origin_price">
                     </div>
                     <div class="mb-3 col-md-6">
                       <label for="price" class="form-label">售價</label>
-                      <input id="price" type="number" min="0" class="form-control" placeholder="請輸入售價" v-model="tmpProduct.price">
+                      <input id="price" type="number" min="0" class="form-control" placeholder="請輸入售價" v-model.number="tmpProduct.price">
                     </div>
                   </div>
                   <hr>
-
                   <div class="mb-3">
                     <label for="description" class="form-label">產品描述</label>
                     <textarea id="description" type="text" class="form-control"placeholder="請輸入產品描述" v-model="tmpProduct.description"></textarea>
@@ -220,12 +233,10 @@
           getProducts(){
             axios.get(`${this.url}v2/api/${this.pathName}/admin/products`)
               .then(res => {
-                console.log(res)
                 this.productList = res.data.products;
-                console.log(this.productList)
               })
               .catch(err =>{
-                alert(err.response.data.message);
+                alert(err.data.message);
               });
           },
           openModal(type,product){
@@ -236,16 +247,12 @@
               }
               openProductModal.show();
             } else if(this.getType === 'edit'){
-              console.log(product)
               this.tmpProduct = {...product}
-              console.log(this.tmpProduct)
               openProductModal.show();
             } else {
               this.tmpProduct = {...product}
-              // console.log(this.tmpProduct)
               delProductModal.show();
             }
-            
           },
           updateModal(product){
             if(this.getType === 'new') {
@@ -254,7 +261,7 @@
                   this.getProducts();
                 })
                 .catch(err =>{
-                  alert(err.response.data.message);
+                  alert(err.data.message);
                 });
             } else {
               axios.put(`${this.url}v2/api/${this.pathName}/admin/product/${this.tmpProduct.id}`,{data:this.tmpProduct})
@@ -262,25 +269,30 @@
                   this.getProducts();
                 })
                 .catch(err =>{
-                  alert(err.response.data.message);
+                  alert(err.data.message);
                 });
             }
             openProductModal.hide();
           },
           deleteModal(){
-            console.log(this.tmpProduct)
             axios.delete(`${this.url}v2/api/${this.pathName}/admin/product/${this.tmpProduct.id}`)
               .then(res => {
                 delProductModal.hide();
                 this.getProducts();
               })
               .catch(err =>{
-                alert(err.response.data.message);
+                alert(err.data.message);
               });
+          },
+          uploadImages(type){
+            if(type === 'new'){
+              this.tmpProduct.imagesUrl.push('');
+            } else if(type === 'delete'){
+              this.tmpProduct.imagesUrl.pop();
+            }
           },
         },
       }).mount('#app');
-
 
     </script>
 
