--- a/hw3/index.html
+++ b/hw3/index.html
@@ -59,35 +59,6 @@
       </div>
     </div>
 
-    <script type="module">
-      import { createApp } from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js';
-
-      createApp({
-        data(){
-          return{
-            url:"https://vue3-course-api.hexschool.io/",
-            user: {
-              username:"",
-              password:""
-            }
-          }
-        },
-        methods:{
-          login(){
-            axios.post(`${this.url}v2/admin/signin`,this.user)
-              .then(res => {
-                const {expired,token} = res.data;
-                document.cookie = `RainJToken=${token};expires=${new Date(expired)}`;
-                window.location = "product.html"; 
-              })
-              .catch(err =>{
-                alert(`${err.data.error.message}`)
-              });
-          }
-        }
-      }).mount('#app');
-    </script>
-
     <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.9.1/axios.min.js'
       integrity='sha512-Xk3wWei2TGrsh9kDSBKUMIjw/86sLUvhtnv9f7fOuIwhhiUTKz8szkWkzHthrM5Bb3Bu9idSzkxOrkzhcneuiw=='
       crossorigin='anonymous'></script>
@@ -97,5 +68,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
       integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
       crossorigin="anonymous"></script>
+    <script src="./js/index.js" type="module"></script>
   </body>
 </html>
