--- a/hw3/product.html
+++ b/hw3/product.html
@@ -84,7 +84,7 @@
                     <img class="img-fluid" :src="tmpProduct.imageUrl">
                   </div>
                   <h3 class="mb-3">多圖新增</h3>
-                  <div v-if="tmpProduct.imagesUrl.length">
+                  <template v-if="tmpProduct.imagesUrl.length">
                     <div class="mb-1" v-for="(image, index) in tmpProduct.imagesUrl" :key="index">
                       <div class="mb-3">
                         <label for="imageUrl" class="form-label">圖片網址</label>
@@ -104,7 +104,7 @@
                         刪除圖片
                       </button>
                     </div>
-                  </div>
+                  </template>
                   <div v-else>
                     <button class="btn btn-outline-primary btn-sm d-block w-100" @click="uploadImages('new')">
                       新增圖片
@@ -193,108 +193,6 @@
       </div>
       <!-- Modal -->
     </div>
-    
-    <script type="module">
-      import { createApp } from 'https://unpkg.com/vue@3/dist/vue.esm-browser.js';
-      let openProductModal = '';
-      let delProductModal = '';
-
-      createApp({
-        data(){
-          return {
-            url:"https://vue3-course-api.hexschool.io/",
-            pathName:'rainj',
-            productList:[],
-            getType:'',
-            tmpProduct:{
-              imagesUrl:[],
-            },
-          }
-        },
-        mounted(){
-          const token = document.cookie.replace(/(?:(?:^|.*;\s*)RainJToken\s*=\s*([^;]*).*$)|^.*$/, '$1');
-          axios.defaults.headers.common.Authorization = token;
-          this.checkToken();
-
-          openProductModal  = new bootstrap.Modal(document.getElementById('productModal'));
-          delProductModal  = new bootstrap.Modal(document.getElementById('delProductModal'));
-        },
-        methods:{
-          checkToken(){
-            axios.post(`${this.url}v2/api/user/check`)
-              .then(res => {
-                this.getProducts();
-              })
-              .catch(err =>{
-                alert(err.data.message);
-                window.location = "index.html";
-              });
-          },
-          getProducts(){
-            axios.get(`${this.url}v2/api/${this.pathName}/admin/products`)
-              .then(res => {
-                this.productList = res.data.products;
-              })
-              .catch(err =>{
-                alert(err.data.message);
-              });
-          },
-          openModal(type,product){
-            this.getType = type ;
-            if(this.getType === 'new') {
-              this.tmpProduct = {
-                imagesUrl:[],
-              }
-              openProductModal.show();
-            } else if(this.getType === 'edit'){
-              this.tmpProduct = {...product}
-              openProductModal.show();
-            } else {
-              this.tmpProduct = {...product}
-              delProductModal.show();
-            }
-          },
-          updateModal(product){
-            if(this.getType === 'new') {
-              axios.post(`${this.url}v2/api/${this.pathName}/admin/product`,{data:product})
-                .then(res => {
-                  this.getProducts();
-                })
-                .catch(err =>{
-                  alert(err.data.message);
-                });
-            } else {
-              axios.put(`${this.url}v2/api/${this.pathName}/admin/product/${this.tmpProduct.id}`,{data:this.tmpProduct})
-                .then(res => {
-                  this.getProducts();
-                })
-                .catch(err =>{
-                  alert(err.data.message);
-                });
-            }
-            openProductModal.hide();
-          },
-          deleteModal(){
-            axios.delete(`${this.url}v2/api/${this.pathName}/admin/product/${this.tmpProduct.id}`)
-              .then(res => {
-                delProductModal.hide();
-                this.getProducts();
-              })
-              .catch(err =>{
-                alert(err.data.message);
-              });
-          },
-          uploadImages(type){
-            if(type === 'new'){
-              this.tmpProduct.imagesUrl.push('');
-            } else if(type === 'delete'){
-              this.tmpProduct.imagesUrl.pop();
-            }
-          },
-        },
-      }).mount('#app');
-
-    </script>
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.9.1/axios.min.js'
             integrity='sha512-Xk3wWei2TGrsh9kDSBKUMIjw/86sLUvhtnv9f7fOuIwhhiUTKz8szkWkzHthrM5Bb3Bu9idSzkxOrkzhcneuiw=='
@@ -305,6 +203,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
             integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
             crossorigin="anonymous"></script>
+    <script src="./js/product.js" type="module"></script>
 
   </body>
 
