[feat]分頁功能改寫成$emit

--- a/hw4/product.html
+++ b/hw4/product.html
@@ -60,7 +60,7 @@
             </tr>
           </tbody>
         </table>
-        <pagination :pages="page" :get-products="getProducts" ></pagination>
+        <pagination :pages="page" @change-page="getProducts"></pagination>
       </div>
       <!-- Modal -->
       <div id="productModal" ref="productModal" class="modal fade" tabindex="-1" aria-labelledby="productModalLabel" aria-hidden="true">
