--- a/hw4/index.html
+++ b/hw4/index.html
@@ -9,7 +9,7 @@
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/all.css" />
   </head>
-  <body>
+  <body class="login">
     <div id="app">
       <div class="container">
         <div class="row justify-content-center">
