--- a/hw4/product.html
+++ b/hw4/product.html
@@ -7,12 +7,13 @@
     <title>第四周</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/all.css" />
   </head>
   <body>
     <div id="app">
       <div class="container">
         <div class="text-end mt-4">
-          <button class="btn btn-primary" type="button" @click="openModal('new','')">
+          <button class="btn btn-primary" type="button" @click.prevent="openModal('new','')">
             建立新的產品
           </button>
         </div>
@@ -49,10 +50,10 @@
               </td>
               <td>
                 <div class="btn-group">
-                  <button type="button" class="btn btn-outline-primary btn-sm" @click="openModal('edit',product)">
+                  <button type="button" class="btn btn-outline-primary btn-sm" @click.prevent="openModal('edit',product)">
                     編輯
                   </button>
-                  <button type="button" class="btn btn-outline-danger btn-sm" @click="openModal('delete',product)">
+                  <button type="button" class="btn btn-outline-danger btn-sm" @click.prevent="openModal('delete',product)">
                     刪除
                   </button>
                 </div>
@@ -67,7 +68,7 @@
         <product-modal :get-type="getType" :tmp-product="tmpProduct" :update-modal="updateModal" :upload-images="uploadImages" class="modal-dialog modal-xl"></product-modal>
       </div>
       <div id="delProductModal" ref="delProductModal" class="modal fade" tabindex="-1" aria-labelledby="delProductModalLabel" aria-hidden="true">
-        <delete-product-modal :delete-modal="deleteModal" class="modal-dialog modal-xl"></delete-product-modal>
+        <delete-product-modal :delete-modal="deleteModal" :tmp-product="tmpProduct" class="modal-dialog modal-xl"></delete-product-modal>
       </div>
       <!-- Modal -->
     </div>
