--- a/hw5/index.html
+++ b/hw5/index.html
@@ -13,7 +13,7 @@
       <div class="container">
         <div class="mt-4">
           <!-- 產品Modal -->
-          <product-modal :id="productId" :add-to-cart="addToCart" :open-modal="openModal" ref="productModal"></product-modal>
+          <!-- <product-modal :temp-product="tempProduct" :add-to-cart="addToCart" ref="productModal"></product-modal> -->
           <!-- 產品Modal -->
           <table class="table align-middle">
             <thead>
@@ -41,11 +41,11 @@
                 </td>
                 <td>
                   <div class="btn-group btn-group-sm">
-                    <button type="button" class="btn btn-outline-secondary" @click="openModal(item.id)">
+                    <button type="button" class="btn btn-outline-secondary" :disabled="item.id === loadingItem" @click.prevent="getProduct(item.id)">
                       <i class="fas fa-spinner fa-pulse"></i>
                       查看更多
                     </button>
-                    <button type="button" class="btn btn-outline-danger" @click="addToCart(item.id,1)">
+                    <button type="button" class="btn btn-outline-danger" :disabled="item.id === loadingItem" @click.prevent="addToCart(item.id,1)">
                       <i class="fas fa-spinner fa-pulse"></i>
                       加到購物車
                     </button>
@@ -56,7 +56,7 @@
           </table>
           <!-- 購物車列表 -->
           <div class="text-end">
-            <button class="btn btn-outline-danger" type="button">清空購物車</button>
+            <button class="btn btn-outline-danger" type="button" @click.prevent="deleteCart">清空購物車</button>
           </div>
           <table class="table align-middle">
             <thead>
@@ -71,7 +71,7 @@
               <template v-if="cart.carts">
                 <tr v-for="item in cart.carts" :key="item.id">
                   <td>
-                    <button type="button" class="btn btn-outline-danger btn-sm" :disabled="item.id === loadingItem" @click="deleteCartItem(item)">
+                    <button type="button" class="btn btn-outline-danger btn-sm" :disabled="item.id === loadingItem" @click.prevent="deleteCartItem(item)">
                       <i class="fas fa-spinner fa-pulse"></i>
                       x
                     </button>
@@ -112,45 +112,42 @@
           </table>
         </div>
         <div class="my-5 row justify-content-center">
-          <!-- <v-form ref="form" class="col-md-6" v-slot="{ errors }" >
+          <v-form ref="form" class="col-md-6" v-slot="{ errors }" @submit="createOrder">
             <div class="mb-3">
               <label for="email" class="form-label">Email</label>
+              <div>{{errors}}</div>
               <v-field id="email" name="email" type="email" class="form-control"
-                       :class="{ 'is-invalid': errors['email'] }" placeholder="請輸入 Email" 
+                       :class="{ 'is-invalid': errors.email }" placeholder="請輸入 Email" 
+                       v-modal="user.email"  rules="required"
                       ></v-field>
               <error-message name="email" class="invalid-feedback"></error-message>
             </div>
-
             <div class="mb-3">
               <label for="name" class="form-label">收件人姓名</label>
               <v-field id="name" name="姓名" type="text" class="form-control" :class="{ 'is-invalid': errors['姓名'] }"
-                       placeholder="請輸入姓名" rules="required"></v-field>
+                       placeholder="請輸入姓名" v-modal="user.name" rules="required"></v-field>
               <error-message name="姓名" class="invalid-feedback"></error-message>
             </div>
-
             <div class="mb-3">
               <label for="tel" class="form-label">收件人電話</label>
               <v-field id="tel" name="電話" type="text" class="form-control" :class="{ 'is-invalid': errors['電話'] }"
                        placeholder="請輸入電話" ></v-field>
               <error-message name="電話" class="invalid-feedback"></error-message>
             </div>
-
             <div class="mb-3">
               <label for="address" class="form-label">收件人地址</label>
               <v-field id="address" name="地址" type="text" class="form-control" :class="{ 'is-invalid': errors['地址'] }"
                        placeholder="請輸入地址" rules="required" ></v-field>
               <error-message name="地址" class="invalid-feedback"></error-message>
             </div>
-
             <div class="mb-3">
               <label for="message" class="form-label">留言</label>
               <textarea id="message" class="form-control" cols="30" rows="10" ></textarea>
             </div>
             <div class="text-end">
-              <button type="submit" class="btn btn-danger"
-                      >送出訂單</button>
+              <button type="submit" class="btn btn-danger">送出訂單</button>
             </div>
-          </v-form> -->
+          </v-form>
         </div>
       </div>
     </div>
@@ -184,11 +181,10 @@
                         <select name="" id="" class="form-select" v-model="qty">
                           <option :value="i" v-for="i in 20" :key="`${i}_key`">{{i}}</option>
                         </select>
-                        <button type="button" class="btn btn-primary" @click="addToCart(tempProduct.id,qty)">加入購物車</button>
+                        <button type="button" class="btn btn-primary" @click.prevent="addToCart(tempProduct.id,qty)">加入購物車</button>
                       </div>
                     </div>
                 </div>
-                  <!-- col-sm-6 end -->
               </div>
             </div>
           </div>
@@ -196,14 +192,14 @@
       </div>
     </script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.9.1/axios.min.js'
-            integrity='sha512-Xk3wWei2TGrsh9kDSBKUMIjw/86sLUvhtnv9f7fOuIwhhiUTKz8szkWkzHthrM5Bb3Bu9idSzkxOrkzhcneuiw=='
-            crossorigin='anonymous'></script>
+    integrity='sha512-Xk3wWei2TGrsh9kDSBKUMIjw/86sLUvhtnv9f7fOuIwhhiUTKz8szkWkzHthrM5Bb3Bu9idSzkxOrkzhcneuiw=='
+    crossorigin='anonymous'></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
-            integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
-            crossorigin="anonymous"></script>
+        integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
+        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
-            integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
-            crossorigin="anonymous"></script>
+        integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
+        crossorigin="anonymous"></script>
     <script src="https://unpkg.com/vue@next"></script>
     <script src="https://unpkg.com/vee-validate@next"></script>
     <script src="https://unpkg.com/@vee-validate/i18n@4.1.0"></script>
