--- a/hw5/index.html
+++ b/hw5/index.html
@@ -13,7 +13,7 @@
       <div class="container">
         <div class="mt-4">
           <!-- 產品Modal -->
-          <!-- <product-modal :temp-product="tempProduct" :add-to-cart="addToCart" ref="productModal"></product-modal> -->
+          <product-modal :temp-product="tempProduct" :add-to-cart="addToCart" ref="productModal"></product-modal>
           <!-- 產品Modal -->
           <table class="table align-middle">
             <thead>
@@ -118,31 +118,31 @@
               <div>{{errors}}</div>
               <v-field id="email" name="email" type="email" class="form-control"
                        :class="{ 'is-invalid': errors.email }" placeholder="請輸入 Email" 
-                       v-modal="user.email"  rules="required"
+                       v-model="user.email"  rules="required"
                       ></v-field>
               <error-message name="email" class="invalid-feedback"></error-message>
             </div>
             <div class="mb-3">
               <label for="name" class="form-label">收件人姓名</label>
               <v-field id="name" name="姓名" type="text" class="form-control" :class="{ 'is-invalid': errors['姓名'] }"
-                       placeholder="請輸入姓名" v-modal="user.name" rules="required"></v-field>
+                       placeholder="請輸入姓名" v-model="user.name" rules="required"></v-field>
               <error-message name="姓名" class="invalid-feedback"></error-message>
             </div>
             <div class="mb-3">
               <label for="tel" class="form-label">收件人電話</label>
               <v-field id="tel" name="電話" type="text" class="form-control" :class="{ 'is-invalid': errors['電話'] }"
-                       placeholder="請輸入電話" ></v-field>
+                       placeholder="請輸入電話" v-model="user.tel" rules="required"></v-field>
               <error-message name="電話" class="invalid-feedback"></error-message>
             </div>
             <div class="mb-3">
               <label for="address" class="form-label">收件人地址</label>
               <v-field id="address" name="地址" type="text" class="form-control" :class="{ 'is-invalid': errors['地址'] }"
-                       placeholder="請輸入地址" rules="required" ></v-field>
+                       placeholder="請輸入地址" v-model="user.address" rules="required" ></v-field>
               <error-message name="地址" class="invalid-feedback"></error-message>
             </div>
             <div class="mb-3">
               <label for="message" class="form-label">留言</label>
-              <textarea id="message" class="form-control" cols="30" rows="10" ></textarea>
+              <textarea id="message" class="form-control" cols="30" rows="10" v-model="user.message"></textarea>
             </div>
             <div class="text-end">
               <button type="submit" class="btn btn-danger">送出訂單</button>
@@ -191,6 +191,7 @@
         </div>
       </div>
     </script>
+    
     <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.9.1/axios.min.js'
     integrity='sha512-Xk3wWei2TGrsh9kDSBKUMIjw/86sLUvhtnv9f7fOuIwhhiUTKz8szkWkzHthrM5Bb3Bu9idSzkxOrkzhcneuiw=='
     crossorigin='anonymous'></script>
