--- a/hw5/index.html
+++ b/hw5/index.html
@@ -129,7 +129,7 @@
             </div>
             <div class="mb-3">
               <label for="tel" class="form-label">收件人電話</label>
-              <v-field id="tel" name="電話" type="text" class="form-control" :class="{ 'is-invalid': errors['電話'] }"
+              <v-field id="tel" name="電話" type="tel" class="form-control" :class="{ 'is-invalid': errors['電話'] }"
                        placeholder="請輸入電話" v-model="form.user.tel" :rules="isPhone"></v-field>
               <error-message name="電話" class="invalid-feedback"></error-message>
             </div>
